force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/SVMXA360__CONF_WarrantyConfig__c.object-meta.xml
<CustomObject>
    <description>This object has rules to create asset-warranty from warranty-term.</description>
    <label>Warranty Configuration</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Warranty Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>