force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__AutoWarrOnCreateAsset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AutoWarrOnCreateAsset__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If enabled, creating Asset record would create its Warranty.</description>
    <label>Automatic Warranty on creating Asset</label>
    <type>Checkbox</type>
</CustomField>