force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__AutoWarrOnUpdateAsset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AutoWarrOnUpdateAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, updating Asset record would create its Warranty.</description>
    <label>Automatic Warranty on updating Asset</label>
    <type>Checkbox</type>
</CustomField>