force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__EffectiveFromConfig__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EffectiveFromConfig__c</fullName>
    <description>This field defines the mapping between the field label with API name for the fields which needs to be considered for the Start Date of Warranty Creation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective From Config</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>