force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__ObjectMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The object mapping to be used for creating Warranty.</description>
    <label>Object Mapping to Use</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Warranty Configuration</relationshipLabel>
    <relationshipName>Warranty_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>