force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__RuleID__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RuleID__c</fullName>
    <description>The unique name of the rule</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>