force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__RuleScope__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RuleScope__c</fullName>
    <description>This indicates which rule is applicable for Warranty creation</description>
    <label>Rule Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>