force-app/main/default/objects/SVMXA360__CONF_WarrantyConfig__c/fields/SVMXA360__RuleTitle__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RuleTitle__c</fullName>
    <description>The title of the Warranty configuration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>